fix: sticky hover on mobile, footer transparency

--- a/src/app.css
+++ b/src/app.css
@@ -47,25 +47,35 @@
         @apply text-white
     }
     .btn {
-        @apply text-white bg-slate-700 hover:shadow-slate-800 hover:scale-105 
-        transition-all rounded-md px-4 py-2
-        hover:outline-none outline-lime-500 outline-1 outline
-        hover:shadow-md shadow-lime-400 font-bold tracking-wider
-        hover:bg-gradient-to-l from-lime-500 to-lime-700
+        @apply text-white bg-slate-700 transition-all rounded-md px-4 py-2
+        outline-lime-500 outline-1 outline shadow-lime-400 font-bold tracking-wider
+        from-lime-500 to-lime-700
+    }
+    @media (hover: hover) {
+        .btn {
+            @apply hover:shadow-slate-800 hover:scale-105 hover:bg-gradient-to-l
+            hover:shadow-md hover:outline-none;
+        }
+        .btn-plain {
+            @apply hover:bg-slate-600 hover:shadow-slate-800 hover:scale-105;
+        }
+        .btn-cancel {
+            @apply hover:text-white hover:bg-gradient-to-r;
+        }
+        .card {
+            @apply hover:scale-105 
+        }
     }
     .btn-plain {
-        @apply text-white bg-slate-700 hover:bg-slate-600 hover:shadow-slate-800 hover:scale-105 
-        shadow-md transition-all rounded-md px-4 py-2
+        @apply text-white bg-slate-700 shadow-md transition-all rounded-md px-4 py-2
     }
     .btn-cancel {
-        @apply outline-none
-        hover:bg-gradient-to-r from-red-700 to-red-500
-        hover:text-white
+        @apply outline-none from-red-700 to-red-500   
     }
     .card {
-        @apply mb-4 p-5 sm:m-4 cursor-pointer inline-block relative hover:scale-105 
-        bg-gradient-to-br from-blue-800 to-slate-900 
-        transition-all max-w-lg rounded-2xl overflow-hidden shadow-2xl
+        @apply mb-4 p-5 sm:m-4 cursor-pointer inline-block relative
+        bg-gradient-to-br from-blue-800 to-slate-900 transition-all max-w-lg 
+        rounded-2xl overflow-hidden shadow-2xl
     }
     .error {
         @apply outline outline-1 outline-red-500 p-2
